# solarm-devenv

./: .gitignore  .gitmodules  README.md  docker-compose.yml  make_build_container.sh  run_build_illumos.sh  start_build_container.sh
.github/: FUNDING.yml
dhcp-data/: dhcpd.conf
netsvc-vm/: Vagrantfile  dhcpd-foundation.conf  dhcpd-illumos.conf  dhcpd.main.conf
netsvc-vm/.vagrant/bundler/: global.sol
netsvc-vm/.vagrant/machines/default/libvirt/: action_provision  box_meta  created_networks  id  index_uuid  private_key  synced_folders  vagrant_cwd
netsvc-vm/rpm/: .rpmmacros  TOASTdhcp-foundation-conf.spec  TOASTdhcp-illumos-conf.spec  build_rpms.sh
nfs-data/: exports
qemu-installer/: Dockerfile  README.md  entrypoint.sh
rust-cross/: aarch64_be-unknown-illumos.json  sparcv9-unknown-illumos.json
rust-cross/hello-world/: .gitignore  Cargo.toml
rust-cross/originals/: aarch64_be-unknown-linux-gnu.json  sparcv9-sun-solaris.json  x86_64-sun-solaris.json  x86_64-unknown-illumos.json
