[package]
name = "hello-world"
authors = ["Till Wegmueller <till.wegmueller@openflowlabs.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.cargo-sysroot]
target = "x86_64-unknown-illumos"